# autogit

./: Cargo.toml  README.md  build_windows.bat  publish_public.sh  setup_mac.sh
src/: main.rs
